refactor: services to use mapper instead of base service inheritance for dto