@@ -3,32 +3,33 @@ package com.yalice.wardrobe_social_app.services.userServiceTests;
 import com.yalice.wardrobe_social_app.dtos.user.UserResponseDto;
 import com.yalice.wardrobe_social_app.entities.User;
 import com.yalice.wardrobe_social_app.exceptions.UserNotFoundException;
+import com.yalice.wardrobe_social_app.mappers.UserMapper;
 import com.yalice.wardrobe_social_app.repositories.UserRepository;
 import com.yalice.wardrobe_social_app.services.UserSearchServiceImpl;
-import com.yalice.wardrobe_social_app.services.helpers.DtoConversionService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
+@ExtendWith(MockitoExtension.class)
 class UserSearchServiceImplTest {
 
     @Mock
     private UserRepository userRepository;
 
     @Mock
-    private DtoConversionService dtoConversionService;
+    private UserMapper userMapper;
 
     @InjectMocks
     private UserSearchServiceImpl userSearchService;
@@ -36,165 +37,45 @@ class UserSearchServiceImplTest {
     private User user;
     private UserResponseDto userResponseDto;
 
-    @Mock
-    Page<User> userPage;
-
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
-        user = new User();
-        user.setId(1L);
-        user.setUsername("testuser");
-        user.setEmail("test@example.com");
-
+        user = User.builder().id(1L).username("testuser").email("test@example.com").build();
         userResponseDto = new UserResponseDto(user.getId(), user.getUsername(), user.getEmail());
     }
 
     @Test
-    void testGetUserByUsername_Success() {
+    void shouldReturnUserWhenUsernameExists() {
         when(userRepository.findByUsername("testuser")).thenReturn(Optional.of(user));
-        when(dtoConversionService.convertToUserResponseDto(user)).thenReturn(userResponseDto);
+        when(userMapper.toResponseDto(user)).thenReturn(userResponseDto);
 
         UserResponseDto response = userSearchService.getUserByUsername("testuser");
 
         assertNotNull(response);
         assertEquals("testuser", response.getUsername());
-        verify(userRepository, times(1)).findByUsername("testuser");
-        verify(dtoConversionService, times(1)).convertToUserResponseDto(user);
+        verify(userRepository).findByUsername("testuser");
     }
 
     @Test
-    void testGetUserByUsername_UserNotFound() {
+    void shouldThrowExceptionWhenUsernameNotFound() {
         when(userRepository.findByUsername("testuser")).thenReturn(Optional.empty());
 
-        UserNotFoundException exception = assertThrows(UserNotFoundException.class, () -> {
-            userSearchService.getUserByUsername("testuser");
-        });
-
-        assertEquals("User not found with username: testuser", exception.getMessage());
-        verify(userRepository, times(1)).findByUsername("testuser");
+        assertThrows(UserNotFoundException.class, () -> userSearchService.getUserByUsername("testuser"));
+        verify(userRepository).findByUsername("testuser");
     }
 
     @Test
-    void testGetUserById_Success() {
-        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-        when(dtoConversionService.convertToUserResponseDto(user)).thenReturn(userResponseDto);
-
-        UserResponseDto response = userSearchService.getUserById(1L);
-
-        assertNotNull(response);
-        assertEquals("testuser", response.getUsername());
-        verify(userRepository, times(1)).findById(1L);
-        verify(dtoConversionService, times(1)).convertToUserResponseDto(user);
-    }
-
-    @Test
-    void testGetUserById_UserNotFound() {
-        when(userRepository.findById(1L)).thenReturn(Optional.empty());
-
-        UserNotFoundException exception = assertThrows(UserNotFoundException.class, () -> {
-            userSearchService.getUserById(1L);
-        });
-
-        assertEquals("User not found with ID: 1", exception.getMessage());
-        verify(userRepository, times(1)).findById(1L);
-    }
-
-    @Test
-    void testGetUserEntityById_Success() {
-        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-
-        User response = userSearchService.getUserEntityById(1L);
-
-        assertNotNull(response);
-        assertEquals("testuser", response.getUsername());
-        verify(userRepository, times(1)).findById(1L);
-    }
-
-    @Test
-    void testGetUserEntityById_UserNotFound() {
-        when(userRepository.findById(1L)).thenReturn(Optional.empty());
-
-        UserNotFoundException exception = assertThrows(UserNotFoundException.class, () -> {
-            userSearchService.getUserEntityById(1L);
-        });
-
-        assertEquals("User not found with ID: 1", exception.getMessage());
-        verify(userRepository, times(1)).findById(1L);
-    }
-
-    @Test
-    void testSearchUsersByUsername_Success() {
-        User user2 = new User();
-        user2.setId(2L);
-        user2.setUsername("testuser2");
-        user2.setEmail("test2@example.com");
-
-        when(userRepository.findByUsernameContainingIgnoreCase("test")).thenReturn(Arrays.asList(user, user2));
-
-        UserResponseDto userResponseDto1 = new UserResponseDto(user.getId(), user.getUsername(), user.getEmail());
-        UserResponseDto userResponseDto2 = new UserResponseDto(user2.getId(), user2.getUsername(), user2.getEmail());
-
-        when(dtoConversionService.convertToUserResponseDto(user)).thenReturn(userResponseDto1);
-        when(dtoConversionService.convertToUserResponseDto(user2)).thenReturn(userResponseDto2);
-
-        List<UserResponseDto> users = userSearchService.searchUsersByUsername("test");
-
-        assertNotNull(users);
-        assertEquals(2, users.size());
-        assertEquals("testuser", users.get(0).getUsername());
-        assertEquals("testuser2", users.get(1).getUsername());
-        verify(userRepository, times(1)).findByUsernameContainingIgnoreCase("test");
-        verify(dtoConversionService, times(2)).convertToUserResponseDto(any(User.class));
-    }
-
-    @Test
-    void testSearchUsersByUsername_EmptyResult() {
-        when(userRepository.findByUsernameContainingIgnoreCase("unknown")).thenReturn(List.of());
-
-        List<UserResponseDto> users = userSearchService.searchUsersByUsername("unknown");
-
-        assertNotNull(users);
-        assertEquals(0, users.size());
-        verify(userRepository, times(1)).findByUsernameContainingIgnoreCase("unknown");
-    }
-
-    @Test
-    void testGetAllUsers_Success() {
-        User user2 = new User();
-        user2.setId(2L);
-        user2.setUsername("testuser2");
-        user2.setEmail("test2@example.com");
-
-        List<User> userList = Arrays.asList(user, user2);
-        Page<User> userPage = new PageImpl<>(userList);
-
+    void shouldReturnPagedUsers() {
+        User user2 = User.builder().id(2L).username("testuser2").email("test@example.com").build();
+        List<User> users = List.of(user, user2);
+        Page<User> userPage = new PageImpl<>(users);
         when(userRepository.findAll(PageRequest.of(0, 10))).thenReturn(userPage);
 
-        UserResponseDto userResponseDto1 = new UserResponseDto(user.getId(), user.getUsername(), user.getEmail());
-        UserResponseDto userResponseDto2 = new UserResponseDto(user2.getId(), user2.getUsername(), user2.getEmail());
+        List<UserResponseDto> userDtos = users.stream().map(u -> new UserResponseDto(u.getId(), u.getUsername(), u.getEmail())).toList();
+        when(userMapper.toResponseDto(any(User.class))).thenReturn(userDtos.get(0), userDtos.get(1));
 
-        when(dtoConversionService.convertToUserResponseDto(user)).thenReturn(userResponseDto1);
-        when(dtoConversionService.convertToUserResponseDto(user2)).thenReturn(userResponseDto2);
+        List<UserResponseDto> result = userSearchService.getAllUsers(0, 10);
 
-        List<UserResponseDto> users = userSearchService.getAllUsers(0, 10);
-
-        assertNotNull(users);
-        assertEquals(2, users.size());
-        assertEquals("testuser", users.get(0).getUsername());
-        verify(userRepository, times(1)).findAll(PageRequest.of(0, 10));
-        verify(dtoConversionService, times(2)).convertToUserResponseDto(any(User.class));
-    }
-
-    @Test
-    void testGetAllUsers_NoUsers() {
-        when(userRepository.findAll(PageRequest.of(0, 10))).thenReturn(userPage);
-        when(userPage.getContent()).thenReturn(List.of());
-
-        List<UserResponseDto> users = userSearchService.getAllUsers(0, 10);
-
-        assertNotNull(users);
-        assertEquals(0, users.size());
-        verify(userRepository, times(1)).findAll(PageRequest.of(0, 10));
+        assertEquals(2, result.size());
+        verify(userRepository).findAll(PageRequest.of(0, 10));
     }
 }
